# lantern

./: .dockerignore  .env.example  .env.keys  .gitignore  README.md  docker-compose.yml  nixpacks.toml
backend/: .env.example  Dockerfile  Makefile  alembic.ini  nixpacks.toml  pyproject.toml  requirements-prod.txt  requirements.txt
backend/alembic/: __init__.py  env.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  graph_curator.py  investigator.py  manager.py  narrative_tracker.py  sentinel.py  synthesizer.py  tools.py  workflows.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  agents.py  artifacts.py  auth.py  dashboard.py  events.py  items.py  narratives.py  reviews.py  search.py  subjects.py  timeline.py
backend/app/collectors/: __init__.py  base.py  filing.py  news.py  podcast.py  rss.py  scheduler.py  social.py  twitter.py  web.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  database.py  orm.py
backend/app/models/schemas/: __init__.py  agents.py  artifacts.py  claims.py  common.py  entities.py  events.py  items.py  narratives.py  reviews.py  search.py  sources.py  subjects.py  timeline.py
backend/app/pipeline/: __init__.py  base.py  claim.py  classify.py  dedup.py  embed.py  entity.py  event.py  narrative.py  normalize.py  orchestrator.py
backend/app/search/: __init__.py  client.py  filters.py  hybrid.py  index.py  lexical.py  query.py  rerank.py  vector.py
backend/app/services/: __init__.py  artifact_service.py  review_service.py
backend/app/services/generation/: __init__.py  base.py  citations.py  grounding.py  memo.py  newsletter.py  report.py  templates.py  timeline.py
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/artifacts/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/narratives/[id]/: page.tsx
frontend/src/app/reviews/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/subjects/: page.tsx
frontend/src/app/subjects/[id]/: page.tsx
frontend/src/app/timeline/: page.tsx
frontend/src/components/: index.ts
frontend/src/components/charts/: LifecycleChart.tsx  PrevalenceChart.tsx  SentimentChart.tsx  index.ts
frontend/src/components/domain/: CitationPopover.tsx  EventCard.tsx  ItemCard.tsx  NarrativeCard.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/search/: SearchFilters.tsx  SearchResults.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  Modal.tsx  Popover.tsx  Select.tsx  Tabs.tsx  Tooltip.tsx  index.ts
frontend/src/lib/: api.ts  store.ts  utils.ts
frontend/src/types/: index.ts
infrastructure/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  init-db.sql
infrastructure/temporal-config/: development.yaml
