# =============================================================================
# Lantern Backend - Python Project Configuration
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lantern"
version = "0.1.0"
description = "Lantern - Narrative Intelligence Platform"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Lantern Team", email = "team@lantern.ai"}
]
maintainers = [
    {name = "Lantern Team", email = "team@lantern.ai"}
]
keywords = [
    "narrative-intelligence",
    "nlp",
    "machine-learning",
    "fastapi",
    "async"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.4",

    # Redis & Caching
    "redis>=5.0.1",
    "hiredis>=2.3.2",

    # Task Queue
    "celery[redis]>=5.3.6",

    # Search
    "opensearch-py>=2.4.2",

    # Object Storage
    "minio>=7.2.3",
    "boto3>=1.34.25",

    # Workflow Orchestration
    "temporalio>=1.4.0",

    # AI/ML
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.2",

    # Data Processing
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",

    # Document Processing
    "python-docx>=1.1.0",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.10.3",
    "openpyxl>=3.1.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "html2text>=2024.2.26",

    # NLP
    "spacy>=3.7.2",
    "nltk>=3.8.1",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "orjson>=3.9.12",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "croniter>=2.0.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "factory-boy>=3.3.0",
    "faker>=22.2.0",
    "httpx>=0.26.0",
    "respx>=0.20.2",
    "aiosqlite>=0.19.0",

    # Linting & Formatting
    "ruff>=0.1.14",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",

    # Type stubs
    "types-redis>=4.6.0",
    "types-python-dateutil>=2.8.19",
    "types-pytz>=2024.1.0",
    "pandas-stubs>=2.1.4",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.4",
    "mkdocstrings[python]>=0.24.0",

    # Development utilities
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "watchfiles>=0.21.0",
    "pre-commit>=3.6.0",
]

ml = [
    # ML/Deep Learning
    "torch>=2.1.2",
    "transformers>=4.36.2",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.4.0",

    # Additional NLP
    "textblob>=0.17.1",
    "wordcloud>=1.9.3",

    # Image Processing
    "pillow>=10.2.0",
]

all = [
    "lantern[dev,ml]",
]

[project.scripts]
lantern = "app.cli:main"

[project.urls]
Homepage = "https://lantern.ai"
Documentation = "https://docs.lantern.ai"
Repository = "https://github.com/lantern-ai/lantern"
Changelog = "https://github.com/lantern-ai/lantern/blob/main/CHANGELOG.md"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.json", "*.yaml", "*.yml"]

# -----------------------------------------------------------------------------
# pytest Configuration
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]
timeout = 30

# -----------------------------------------------------------------------------
# Coverage Configuration
# -----------------------------------------------------------------------------

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "coverage_html"

# -----------------------------------------------------------------------------
# Ruff Configuration (Linting)
# -----------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "S101",   # use of assert
    "S104",   # possible binding to all interfaces
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG",    # unused arguments allowed in tests
    "PLR2004", # magic values allowed in tests
]
"app/migrations/**/*.py" = [
    "ERA001", # commented code allowed in migrations
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
]

# -----------------------------------------------------------------------------
# Black Configuration (Formatting)
# -----------------------------------------------------------------------------

[tool.black]
target-version = ["py311"]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# -----------------------------------------------------------------------------
# isort Configuration
# -----------------------------------------------------------------------------

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip = [".venv", "migrations"]
combine_as_imports = true
force_wrap_aliases = true

# -----------------------------------------------------------------------------
# mypy Configuration (Type Checking)
# -----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "minio.*",
    "opensearchpy.*",
    "temporalio.*",
    "spacy.*",
    "nltk.*",
    "transformers.*",
    "sentence_transformers.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
